@@ -35,6 +35,7 @@ exempt of errors.
 - Glen Masgai
 - Gustavo Zacarias (gustavoz)
 - Hartmut Holzgraefe (hholzgra)
+- Hugo Beauzée-Luyssen (chouquette)
 - Iain Denniston (ectotropic)
 - Ingo Hofmann
 - Ivan Romanov (ivanromanov)
