@@ -32,7 +32,7 @@
 
 #include "LinkedList.h"
 
-#ifdef WIN32
+#ifdef _WIN32
 	/* Do not #include <sys/param.h> */
 #else
 	#include <sys/param.h>
